--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,13 @@
+<html>
+<title>ChingYu的網站</title>
+<body>
 <h1>歡迎來到ChingYu的網站！</h1>
 <p>這裡有很多很棒的內容</p>
 
-<h1>我的寵物</h1>
-<img src="cat.png" alt="一隻貓">
+<h2>我的寵物</h2>
+<h3>＾-＾</h3>
+<p>1234</p>
+<img src="cat.jpeg" alt="一隻貓">
 <p>這是我在網路上找到的貓圖！</p>
 <a href="https://images.app.goo.gl/aTb8B63aaBfRgTp78"></a>
 
@@ -14,3 +19,6 @@
     <li>草莓</li>
 </ul>
 <p>這是我最愛吃的三種水果！</p>
+
+</body>
+</html>
